# SyGra

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README_SERVICE.md  check.mk  generate_metrics_excel.py  index.html  main.py  mkdocs.yml  pyproject.toml  run_tools.sh  run_ui.sh  setup_grasp_lib.sh  sitemap.xml  sygra_service.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: feature_template.md  issue_template.md
.github/workflows/: ci.yaml  ci.yml  format.yaml  gh-pages.yml  lint.yaml  mkdocs-check.yml  publish.yml  tests.yaml
apps/: create_from_template.py  create_new_task.py  grasp_app.py  models.py  tasks.py  utils.py
apps/agents_eval_dashboard/: app.py  browser_use_cua.py  dynamic_desktop.py  dynamic_model_comparison.py  dynamic_web_multiturn.py  mission_app.py  model_comparison.py  model_details_app.py  tool_comparison.py  utils.py
concepts/data_handler/: index.html
concepts/data_mapper/: index.html
concepts/data_quality/: index.html
concepts/multimodal/audio_to_text/: index.html
concepts/multimodal/image_to_text/: index.html
concepts/schema_validator/: index.html
concepts/structured_output/: index.html
config/: models.yaml
core/: base_task_executor.py  judge_task_executor.py  resumable_execution.py
core/dataset/: data_handler_base.py  dataset_config.py  dataset_processor.py  file_handler.py  huggingface_handler.py
core/graph/: backend_factory.py  graph_config.py
core/models/: custom_models.py  model_factory.py
data_mapper/: helper.py  mapper.py  pipelines.py  transformations.py
docs/: adding_edges.md  contributing.md  development.md  graph_config_guide.md  grasp_library.md  installation.md  sygra_library_examples.md
docs/data_handler/: README.md
docs/data_quality/: README.md
docs/eval/: README.md
docs/features/: metadata_tracking.md  self_refinement.md  semantic_deduplication.md
docs/getting_started/: Task_Executor.md  adding_edges.md  create_new_pipeline.md  create_task_ui.md  graph_config_guide.md  model_configuration.md
docs/integrations/: index.md
docs/metrics/: README.md  aggregator_metrics_summary.md
docs/multimodal/: audio_to_text.md  image_to_text.md
docs/nodes/: agent_node.md  lambda_node.md  llm_node.md  multi_llm_node.md  subgraph_node.md  weighted_sampler_node.md
docs/schema_validator/: README.md
docs/structured_output/: README.md
docs/tutorials/: agent_simulation_tutorial.md  agent_tool_simulation_tutorial.md  audio_to_text_tutorial.md  custom_subgraphs_tutorial.md  evol_instruct_tutorial.md  glaive_code_assistant_tutorial.md  image_to_qna_tutorial.md  structured_output_tutorial.md  structured_output_with_multi_llm_tutorial.md
getting_started/Task_Executor/: index.html
getting_started/adding_edges/: index.html
getting_started/create_new_pipeline/: index.html
getting_started/create_task_ui/: index.html
getting_started/graph_config_guide/: index.html
getting_started/model_configuration/: index.html
grasp/: __init__.py  setup.py
grasp/config/: configuration.yaml  models.yaml
grasp/configuration/: loader.py
grasp/core/: base_task_executor.py  judge_task_executor.py  resumable_execution.py
grasp/data/: __init__.py
grasp/data_mapper/: helper.py  mapper.py  pipelines.py  transformations.py  types.py
grasp/exceptions/: __init__.py
grasp/logger/: logger_config.py
grasp/models/: __init__.py
grasp/nodes/: __init__.py
grasp/processors/: data_transform.py
grasp/tools/: README.md  cli.py  config.py  executor.py  registry.py
grasp/utils/: audio_utils.py  constants.py  decorators.py  graph_utils.py  image_utils.py  tool_utils.py  utils.py
grasp/validators/: custom_schemas.py  custom_validations.py  schema_validator_base.py  schema_validator_custom.py  type_parser.py  yaml_loader.py
grasp/workflow/: __init__.py
grasp_library/: index.html
installation/: index.html
logger/: logger_config.py
processors/: data_transform.py  output_record_generator.py
recipes/evol_instruct/: instruct_mgr.py  task_executor.py
search/: search_index.json
studio/: README.md  __init__.py  api.py  converter.py  execution_manager.py  execution_storage.py  graph_builder.py  models.py  server.py
studio/config/: custom_models.yaml
studio/frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
studio/ui/: index.html
sygra/: __init__.py
sygra/config/: models.yaml
sygra/configuration/: loader.py
sygra/core/: base_task_executor.py  execution_callbacks.py
sygra/integrations/: __init__.py
sygra/metadata/: metadata_collector.py  metadata_integration.py
sygra/processors/: data_transform.py
sygra/utils/: audio_utils.py  constants.py  graph_utils.py  image_utils.py  model_utils.py  multimodal_processor.py  utils.py
sygra/workflow/: __init__.py
tasks/agentic_bfcl_judge_eval/: README.md  analyze_results.py  graph_config.yaml  graph_config_corrupted_gt.yaml  graph_config_freeform.yaml  graph_config_generate_only.yaml  graph_config_nogt_05.yaml  prepare_corrupted_gt.py  prepare_difficulty_inputs.py  run_generate.py  run_judge.py  task_executor.py
tasks/eval/: README.md  utils.py
tests/: conftest.py
tests/configuration/: test_loader.py
tests/core/: test_base_task_executor.py  test_resumable_execution.py
tests/data_mapper/: test_mapper.py
tests/integrations/: __init__.py
tests/metadata/: test_langchain_callback.py  test_metadata_integration.py
tests/processors/: test_data_transform.py
tests/utils/: test_decorators.py  test_graph_utils.py  test_model_utils.py  test_multimodal_processor.py  test_tool_utils.py  test_utils.py
tests/workflow/: test_workflow_init.py
tools/: README.md  __main__.py  base_tool.py  cli.py  config.py  executor.py  registry.py
utils/: audio_utils.py  constants.py  decorators.py  dotenv.py  graph_utils.py  image_utils.py  tool_utils.py  utils.py
validators/: custom_validations.py  schema_validator_base.py  schema_validator_custom.py  type_parser.py  yaml_loader.py
(+595 files in other folders)
